WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208006
[LFC] Sometimes subframes don't even have document elements.
https://bugs.webkit.org/show_bug.cgi?id=208006
Summary
[LFC] Sometimes subframes don't even have document elements.
alan
Reported
2020-02-20 08:02:09 PST
ssia
Attachments
Patch
(3.99 KB, patch)
2020-02-20 08:06 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-02-20 08:02:31 PST
<
rdar://problem/59629147
>
alan
Comment 2
2020-02-20 08:06:47 PST
Created
attachment 391288
[details]
Patch
WebKit Commit Bot
Comment 3
2020-02-20 08:44:44 PST
Comment on
attachment 391288
[details]
Patch Clearing flags on attachment: 391288 Committed
r257064
: <
https://trac.webkit.org/changeset/257064
>
WebKit Commit Bot
Comment 4
2020-02-20 08:44:46 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug