[LFC] Sometimes subframes don't even have document elements. https://bugs.webkit.org/show_bug.cgi?id=208006 <rdar://problem/59629147>

Source/WebCore:

Reviewed by Antti Koivisto.

Test: fast/layoutformattingcontext/subframe-with-display-none-html.html

Do not try to layout a formatting context when it has no content at all.

* layout/LayoutContext.cpp:
(WebCore::Layout::LayoutContext::layoutFormattingContextSubtree):

LayoutTests:

Reviewed by Antti Koivisto.

* fast/layoutformattingcontext/subframe-with-display-none-html-expected.html: Added.
* fast/layoutformattingcontext/subframe-with-display-none-html.html: Added.


Canonical link: https://commits.webkit.org/220977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257064 268f45cc-cd09-0410-ab3c-d52691b4dbfc